# hoermann-supramatic-e2-esphome

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  pyproject.toml  secrets.example.yaml  supramatic-e2-minimal.yaml  supramatic-e2-monitor-idle-tx.yaml  supramatic-e2-monitor-rx17.yaml  supramatic-e2-monitor.yaml  supramatic-e2-proxy.yaml  supramatic-e2.yaml
.github/workflows/: ci.yml  firmware-build.yml  hcp2-nightly.yml
components/hcp2bridge/: __init__.py  hcp2_backend.h  hcp2_c6_asm_dma_probe.h  hcp2_crc.c  hcp2_crc.h  hcp2_engine.c  hcp2_engine.h  hcp2_entity_mapping.h  hcp2_frame.c  hcp2_frame.h  hcp2_lp_blob.c  hcp2_lp_blob.h  hcp2_mailbox.c  hcp2_mailbox.h  hcp2_port.h  hcp2_realtime_port.c  hcp2_realtime_port.h  hcp2_responder_runtime.c  hcp2_responder_runtime.h  hcp2_supervisor.c  hcp2_supervisor.h  hcp2bridge.cpp  hcp2bridge.h  hcp2bridge_backend_esp32_realtime.cpp  hcp2bridge_backend_esp32c6_asm_dma.cpp  hcp2bridge_backend_lp.cpp  hcp2bridge_http_debug.cpp  hcp2bridge_internal.h
components/hcp2bridge/binary_sensor/: __init__.py  hcp2bridge_binary_sensor.cpp  hcp2bridge_binary_sensor.h
components/hcp2bridge/button/: __init__.py  hcp2bridge_button.cpp  hcp2bridge_button.h
components/hcp2bridge/core/: hcp2_crc.c  hcp2_crc.h  hcp2_engine.c  hcp2_engine.h  hcp2_frame.c  hcp2_frame.h  hcp2_hot.h  hcp2_mailbox.c  hcp2_mailbox.h  hcp2_port.h  hcp2_realtime_port.c  hcp2_realtime_port.h  hcp2_responder_runtime.c  hcp2_responder_runtime.h  hcp2_supervisor.c  hcp2_supervisor.h
components/hcp2bridge/cover/: __init__.py  hcp2bridge_cover.cpp  hcp2bridge_cover.h
components/hcp2bridge/light/: __init__.py  hcp2bridge_light.cpp  hcp2bridge_light.h
components/hcp2bridge/lp_blob/: hcp2_lp_blob.c  hcp2_lp_blob.h
components/hcp2bridge/sensor/: __init__.py  hcp2bridge_sensor.cpp  hcp2bridge_sensor.h
components/rs485_http_monitor/: __init__.py  rs485_http_monitor.cpp  rs485_http_monitor.h
components/rs485_proxy/: __init__.py  rs485_proxy.cpp  rs485_proxy.h
components/uapbridge/: __init__.py  uapbridge.cpp  uapbridge.h
components/uapbridge/binary_sensor/: __init__.py  uapbridge_binarySensor.cpp  uapbridge_binarySensor.h
components/uapbridge/button/: __init__.py  uapbridge_button.cpp  uapbridge_button.h
components/uapbridge/cover/: __init__.py  uapbridge_cover.cpp  uapbridge_cover.h
components/uapbridge/light/: __init__.py  uapbridge_light.cpp  uapbridge_light.h
components/uapbridge_esp/: __init__.py  uapbridge_esp.cpp  uapbridge_esp.h
configs/: README.md  secrets.example.yaml  supramatic-4-c6-asm-dma-probe.yaml  supramatic-4-c6-hp-realtime.yaml  supramatic-4-dev.yaml  supramatic-4-esp32-realtime.yaml  supramatic-4-tester.yaml  supramatic-4-wokwi.yaml  supramatic-e2-minimal.yaml  supramatic-e2-monitor-idle-tx.yaml  supramatic-e2-monitor-rx17.yaml  supramatic-e2-monitor.yaml  supramatic-e2-proxy.yaml  supramatic-e2.yaml
docs/: FAQ.md  code-architecture.md  debugging-captures.md  e2-log-capture.md  flashing-ota.md  getting-started.md  hardware-wiring.md  hcp2-realtime-timing-baseline.md  hcp2-series4-tester.md  hcp2-standard-esp32-backend-plan.md  home-assistant-homekit.md  http-monitor-mode.md  persistent-protocol-log.md  protocol-notes.md  proxy-mode.md  release-checklist.md  safety.md  time-based-position.md  troubleshooting.md
docs/markers/: README.md
docs/research/: README.md
emulation/wokwi/: .gitignore  README.md  UPSTREAM_REPRO.md  diagram.esphome.json  diagram.fault-recovery.json  diagram.json  diagram.light-command.json  diagram.opening.json  diagram.restart.json  esphome-steady-state.yaml  fault-recovery.yaml  hcp2_protocol.h  light-command.yaml  lp-uart-repro.yaml  lp-uart-steady-state.yaml  opening.yaml  restart-loop.yaml  steady-state.yaml  supervisor.yaml  supramatic4.chip.c  wokwi.esphome.toml  wokwi.lp-probe.toml  wokwi.restart.toml  wokwi.toml
firmware/hcp2-bringup/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.hil-command-script.defaults  sdkconfig.hil-debug.defaults  sdkconfig.hil-force-reload.defaults  sdkconfig.hil-probe.defaults  sdkconfig.hp-fallback.defaults  sdkconfig.lp-wdt-probe.defaults  sdkconfig.panic-halt.defaults  sdkconfig.panic.defaults  sdkconfig.restart.defaults  sdkconfig.rtc-wdt.defaults  sdkconfig.task-wdt-nonpanic.defaults  sdkconfig.task-wdt.defaults  sdkconfig.wokwi.defaults
firmware/hcp2-bringup/main/: CMakeLists.txt  Kconfig.projbuild  hcp2_bringup_main.c
firmware/hcp2-c6-dma-probe/: CMakeLists.txt  sdkconfig.defaults
firmware/hcp2-c6-dma-probe/main/: CMakeLists.txt  hcp2_c6_dma_probe_main.c
firmware/hcp2-lp/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/hcp2-lp/main/: CMakeLists.txt  hcp2_lp_main.c
firmware/hcp2-lp/main/lp_core/: hcp2_lp_core.c
tests/hcp2/: Makefile  fuzz_hcp2_parser.c  host_responder.c  test_closeout.py  test_debug_browser_e2e.py  test_debug_mock_server.py  test_hcp2_backend_structure.py  test_hcp2_config_validation.py  test_hcp2_core.c  test_hcp2_entity_mapping.cpp  test_hcp2_official_accessory_vectors.py  test_hcp2_phase0a.py  test_hcp2_reference_emulator.py  test_hil_la.py  test_hil_load.py  test_lp_emu.py  test_support_bundle.py  test_supramatic_sim.py  test_update_hcp2_lp_blob.py
tools/: README.md  __init__.py  analyze_garage_aruco_video.py  analyze_hcp_timing.py  build_hcp2_lp_blob_ci.py  check_esp32_realtime_build.py  compare_hcp2_traces.py  decode_phone_sync_video.py  fetch_hcp2_reference.py  garage_test_wizard.py  generate_aruco_marker_pdfs.py  generate_wokwi_hcp2_constants.py  hcp2_closeout.py  hcp2_debug_browser_e2e.py  hcp2_debug_mock_server.py  hcp2_hil_la.py  hcp2_hil_load.py  hcp2_support_bundle.py  hcp_proxy_client.py  init_secrets.py  run_hcp_timing_calibration.py  run_phone_video_sync_capture.py  update_hcp2_lp_blob.py
tools/fixtures/: hcp2_mock_records.jsonl
tools/hcp2_lp_emu/: README.md  __init__.py  __main__.py  dual_iss.py  emulator.py  hp_supervisor_iss.c  hp_supervisor_iss.ld
tools/supramatic_sim/: README.md  __init__.py  __main__.py  door_model.py  protocol.py  simulator.py  transport.py
(+50 files in other folders)
