[project]
name = "garage-door-controller"
version = "0.1.0"
description = "ESPHome firmware and diagnostics for a direct Hoermann HCP1 garage-door controller"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aioesphomeapi>=38.0.0",
  "esphome==2026.5.0",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "opencv-contrib-python-headless>=4.10",
  "pillow>=10.0",
  "pyserial>=3.5",
  "reportlab>=4.0",
]

[project.scripts]
garage-analyze-aruco-video = "tools.analyze_garage_aruco_video:main"
garage-analyze-hcp-timing = "tools.analyze_hcp_timing:main"
garage-compare-hcp2-traces = "tools.compare_hcp2_traces:main"
garage-decode-phone-sync-video = "tools.decode_phone_sync_video:main"
garage-fetch-hcp2-reference = "tools.fetch_hcp2_reference:main"
garage-generate-aruco-markers = "tools.generate_aruco_marker_pdfs:main"
garage-generate-wokwi-hcp2-constants = "tools.generate_wokwi_hcp2_constants:main"
garage-hcp2-lp-emu = "tools.hcp2_lp_emu.__main__:main"
garage-hcp-proxy-client = "tools.hcp_proxy_client:main"
garage-hcp-timing-calibration = "tools.run_hcp_timing_calibration:main"
garage-init-secrets = "tools.init_secrets:main"
garage-phone-sync = "tools.run_phone_video_sync_capture:main"
garage-supramatic-sim = "tools.supramatic_sim.__main__:main"
garage-test-wizard = "tools.garage_test_wizard:main"

[dependency-groups]
dev = [
  "pyelftools>=0.31",
  "pytest>=8.0",
  "unicorn>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
